force-app/main/default/objects/sked_Optimization_Run__c/sked_Optimization_Run__c.object-meta.xml
<CustomObject>
    <label>Optimization Run</label>
    <nameField>
        <displayFormat>OR-{000000}</displayFormat>
        <label>Optimization Run Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Optimization Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>