force-app/main/default/objects/sked_Optimization_Run__c/fields/sked_Account_Preferences__c.field-meta.xml
<CustomField>
    <fullName>sked_Account_Preferences__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Preferences</label>
    <type>Checkbox</type>
</CustomField>