force-app/main/default/objects/sked_Optimization_Run__c/fields/sked_Average_Hours_per_Staff__c.field-meta.xml
<CustomField>
    <fullName>sked_Average_Hours_per_Staff__c</fullName>
    <label>Average Hours per Staff</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>