force-app/main/default/objects/sked_Optimization_Run__c/fields/sked_Daily_Guaranteed_Hours__c.field-meta.xml
<CustomField>
    <fullName>sked_Daily_Guaranteed_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Daily Guaranteed Hours</label>
    <type>Checkbox</type>
</CustomField>