force-app/main/default/objects/sked_Optimization_Run__c/fields/sked_Daily_Guaranteed_Hours_Score__c.field-meta.xml
<CustomField>
    <fullName>sked_Daily_Guaranteed_Hours_Score__c</fullName>
    <label>Daily Guaranteed Hours Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sked_Optimizer_Scoring_Factor</valueSetName>
    </valueSet>
</CustomField>