force-app/main/default/objects/sked_Optimization_Run__c/fields/sked_Debug_Mode__c.field-meta.xml
<CustomField>
    <fullName>sked_Debug_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Debug Mode</label>
    <type>Checkbox</type>
</CustomField>