force-app/main/default/objects/sked_Optimization_Run__c/fields/sked_Drive_Types__c.field-meta.xml
<CustomField>
    <fullName>sked_Drive_Types__c</fullName>
    <description>HRP-12864</description>
    <label>Drive Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Fixed Site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>