force-app/main/default/objects/sked_Optimization_Run__c/fields/sked_End_Date__c.field-meta.xml
<CustomField>
    <fullName>sked_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>