force-app/main/default/objects/sked_Optimization_Run__c/fields/sked_End_Date_Str__c.field-meta.xml
<CustomField>
    <fullName>sked_End_Date_Str__c</fullName>
    <label>End Date Str</label>
    <length>255</length>
    <type>Text</type>
</CustomField>