force-app/main/default/objects/sked_Optimization_Run__c/fields/sked_Is_Dev__c.field-meta.xml
<CustomField>
    <fullName>sked_Is_Dev__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Dev</label>
    <type>Checkbox</type>
</CustomField>