force-app/main/default/objects/sked_Optimization_Run__c/fields/sked_Location_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>sked_Location_Restrictions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Site Restrictions</label>
    <type>Checkbox</type>
</CustomField>