force-app/main/default/objects/sked_Optimization_Run__c/fields/sked_Location_Restrictions_Constraint__c.field-meta.xml
<CustomField>
    <fullName>sked_Location_Restrictions_Constraint__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Location Restrictions Constraint</label>
    <type>Checkbox</type>
</CustomField>