force-app/main/default/objects/sked_Optimization_Run__c/fields/sked_Maximum_Weekly_Hours__c.field-meta.xml
<CustomField>
    <fullName>sked_Maximum_Weekly_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Maximum Weekly Hours</label>
    <type>Checkbox</type>
</CustomField>