force-app/main/default/objects/sked_Optimization_Run__c/fields/sked_Message__c.field-meta.xml
<CustomField>
    <fullName>sked_Message__c</fullName>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>