force-app/main/default/objects/sked_Optimization_Run__c/fields/sked_Minimum_Weekly_Hours__c.field-meta.xml
<CustomField>
    <fullName>sked_Minimum_Weekly_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Minimum Weekly Hours</label>
    <type>Checkbox</type>
</CustomField>