force-app/main/default/objects/sked_Optimization_Run__c/fields/sked_No_of_Percent_Jobs_Filled__c.field-meta.xml
<CustomField>
    <fullName>sked_No_of_Percent_Jobs_Filled__c</fullName>
    <label>% Jobs Filled</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>