force-app/main/default/objects/sked_Optimization_Run__c/fields/sked_Opt_Parm_Geo_Prefer__c.field-meta.xml
<CustomField>
    <fullName>sked_Opt_Parm_Geo_Prefer__c</fullName>
    <description>HRP-12511: Optimization Run Stats Field</description>
    <label>Geographic Preferences (Optimizer Stats)</label>
    <type>TextArea</type>
</CustomField>