force-app/main/default/objects/sked_Optimization_Run__c/fields/sked_Opt_Parm_Role_Priority_Skills__c.field-meta.xml
<CustomField>
    <fullName>sked_Opt_Parm_Role_Priority_Skills__c</fullName>
    <description>HRP-12511: Optimization Run Stats Field</description>
    <label>Role Priorities (Optimizer Stats)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>