force-app/main/default/objects/sked_Optimization_Run__c/fields/sked_Opt_Run_Diff__c.field-meta.xml
<CustomField>
    <fullName>sked_Opt_Run_Diff__c</fullName>
    <description>HRP-12510 Added this field to get the response from rundiff api</description>
    <label>Run Difference</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>