force-app/main/default/objects/sked_Optimization_Run__c/fields/sked_Opt_Run_Meta__c.field-meta.xml
<CustomField>
    <fullName>sked_Opt_Run_Meta__c</fullName>
    <description>HRP-12510 Added this field to get the meta result from the api.</description>
    <label>Run Meta</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>