force-app/main/default/objects/sked_Optimization_Run__c/fields/sked_Opt_Stat_Hard_Constraints_Score__c.field-meta.xml
<CustomField>
    <fullName>sked_Opt_Stat_Hard_Constraints_Score__c</fullName>
    <description>HRP-12511: Optimization Run Stats Field</description>
    <label>Hard Constraints Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>