force-app/main/default/objects/sked_Optimization_Run__c/fields/sked_Opt_Stat_Total_Unsched_Allocations__c.field-meta.xml
<CustomField>
    <fullName>sked_Opt_Stat_Total_Unsched_Allocations__c</fullName>
    <description>HRP-12511: Optimization Run Stats Field</description>
    <formula>sked_Opt_Stat_Total_Planned_Allocations__c - sked_Opt_Stat_Total_Sched_Allocations__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Unscheduled Allocations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>