force-app/main/default/objects/sked_Optimization_Run__c/fields/sked_Priority_Role_Scheduled_Percent__c.field-meta.xml
<CustomField>
    <fullName>sked_Priority_Role_Scheduled_Percent__c</fullName>
    <label>% Priority Role Scheduled</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>