force-app/main/default/objects/sked_Optimization_Run__c/fields/sked_PTO_Availability__c.field-meta.xml
<CustomField>
    <fullName>sked_PTO_Availability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PTO/Availability</label>
    <type>Checkbox</type>
</CustomField>