force-app/main/default/objects/sked_Optimization_Run__c/fields/sked_Role_Certification_Match__c.field-meta.xml
<CustomField>
    <fullName>sked_Role_Certification_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Role / Certification Match</label>
    <type>Checkbox</type>
</CustomField>