force-app/main/default/objects/sked_Optimization_Run__c/fields/sked_Role_Priorities__c.field-meta.xml
<CustomField>
    <fullName>sked_Role_Priorities__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Role Priorities</label>
    <type>Checkbox</type>
</CustomField>