force-app/main/default/objects/sked_Optimization_Run__c/fields/sked_Run_ID__c.field-meta.xml
<CustomField>
    <fullName>sked_Run_ID__c</fullName>
    <externalId>true</externalId>
    <label>Run ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>