force-app/main/default/objects/sked_Optimization_Run__c/fields/sked_Staff_Scheduled_Count__c.field-meta.xml
<CustomField>
    <fullName>sked_Staff_Scheduled_Count__c</fullName>
    <label>Staff Scheduled Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>