force-app/main/default/objects/sked_Optimization_Run__c/fields/sked_Territory_Key__c.field-meta.xml
<CustomField>
    <fullName>sked_Territory_Key__c</fullName>
    <formula>CASESAFEID(sked_District__c) + &apos;:&apos; + CASESAFEID(sked_Collection_Operation__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory Key</label>
    <type>Text</type>
</CustomField>