force-app/main/default/objects/sked_Optimization_Run__c/fields/sked_Timeout_At__c.field-meta.xml
<CustomField>
    <fullName>sked_Timeout_At__c</fullName>
    <label>Timeout At</label>
    <type>DateTime</type>
</CustomField>