force-app/main/default/objects/sked_Optimization_Run__c/fields/sked_Timezone__c.field-meta.xml
<CustomField>
    <fullName>sked_Timezone__c</fullName>
    <description>HRP-12511 Added this field</description>
    <label>Time Zone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>