force-app/main/default/objects/sked_Optimization_Run__c/fields/sked_Total_Travel_Time__c.field-meta.xml
<CustomField>
    <fullName>sked_Total_Travel_Time__c</fullName>
    <label>Total Travel Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>