force-app/main/default/objects/sked_Optimization_Run__c/fields/sked_UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>sked_UniqueKey__c</fullName>
    <label>UniqueKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>