force-app/main/default/objects/sked_Optimization_Run__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>sked_Status__c</columns>
    <columns>sked_Collection_Operation__c</columns>
    <columns>sked_Start_Date__c</columns>
    <columns>sked_End_Date__c</columns>
    <columns>sked_Run_ID__c</columns>
    <columns>sked_Message__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UPDATEDBY_USER</field>
        <operation>equals</operation>
        <value>Automated Process</value>
    </filters>
    <label>All</label>
</ListView>